# AlphaFlow

./: .env.example  .gitignore  AppIcon.icns  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FEATURES.md  FINAL_CLEANUP_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  LICENSE  LIVE_TRADING_READY.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_PRODUCTION.md  README_old.md.backup  SECURITY.md  SESSION_SUMMARY.md  TECH_STACK_ANALYSIS.md  USER_GUIDE.md  main.py  pyproject.toml  requirements-backend.txt  requirements.txt  run_alphaflow.py  setup.cfg  start_backend.sh
app/: alphaflow_mac_old.py.backup  main_window.py  main_window_v1.py.backup
backend/: __init__.py  daily_risk_manager.py  main.py  notification_system.py  portfolio_risk.py  position_manager.py  strategy_executor.py  strategy_logic.py  trade_history.py
core/: __init__.py  advanced_strategies.py  alert_system.py  backtester.py  config.py  data_fetcher.py  data_structures.py  deep_learning.py  indicators.py  ml_predictor.py  multi_timeframe.py  options_trading.py  order_manager.py  portfolio_manager.py  position_sizing.py  risk_manager.py  sentiment_analysis.py  strategies.py  trading_engine.py
docs/: CHANGELOG.md  CHANGES_MADE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FINAL_CLEANUP_SUMMARY.md  ISSUE_RESOLUTION.md  LAUNCH_INSTRUCTIONS.md  LIVE_TRADING_READY.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_TRADING_IMPLEMENTED.md  PROJECT_STRUCTURE.md  README_OLD.md  README_PRODUCTION.md  UI_IMPROVEMENTS.md
frontend/: index.html  package.json  (+2 more)
(+73 files in other folders)
