[project]
name = "alphaflow"
version = "1.0.0"

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.flake8]
max-line-length = 120
ignore = ["E501"]

[tool.pylint]
max-line-length = 120

[tool.pyright]
reportUnusedImport = false
reportMissingImports = false

[tool.pylsp.plugins.pycodestyle]
maxLineLength = 120
ignore = ["E501"]
